Veretino 0.5.0
Internal changes:
* Redesigned task management system.

Veretino 0.4.5
* Improved handling of damaged and unreadable files.

---
Veretino 0.4.4
* Implemented skipping of queued items that became unavailable during the process.
* Window Title: fixed premature "✓ verified" mark when resuming the process.
* Minor UI improvements and performance optimizations.

---
Veretino 0.4.3
* Fixed a missed database save that occurred when there was unsaved data and a drag-and-drop event from the file system, or opening a folder from the menu.
* Fixed a silent crash (occurred when closing the app with a setted database) on Qt6.
* Added CMake build system.
* Improved appearance of the "About box".

---
Veretino 0.4.2
* Fixed Qt6 builds.

---
Veretino 0.4.1
* Redesigned and improved Status Bar.
* Added the ability to analyze the contents of a database by type and size, similar to how the "Folder Contents" do.
* The window title now displays some info about the database. A hint will also appear if any Mismatches are found during the verification process.

Fixes and Minor Enhancements:
* Improved keyboard operation in the Filter Creation Dialog.
* Now the process cancelation prompt disappears automatically if it is no longer relevant.
* Improved icons, titles, and behavior of some dialog boxes.
* Fixed unwanted behavior when pressing the main Button or some keys during a silent process (big data).

---
Veretino 0.4.0
* The database file saving policy has become customizable: if the "Instant Saving" checkbox is checked, the database file will be recreated immediately after any changes are made; if not checked, then at the user's request or when closing.
* Added the ability to independently update the values ​​of files contained in the database.
* This version supports both Qt5 and Qt6 builds.

Internal changes:
* The process management system has been completely rewritten.
* The architecture has been optimized and improved.

Fixes and Minor Enhancements: